--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "ramsey/uuid": "^2.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
