--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bemosior/PHPasswordPusher",
+    "name": "unicalabs/agrippa",
     "description": "A secret sharing mechanism based on the principal that using a soon-to-be-expiring link to retrieve sensitive information is better than having the sensitive information persist in email, chat, etc....",
     "require": {
         "php": ">=5.5.9",
