Composer JSON readied for Packagist.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "unicalabs/agrippa",
-    "description": "A secret sharing mechanism based on the principal that using a soon-to-be-expiring link to retrieve sensitive information is better than having the sensitive information persist in email, chat, etc....",
+    "description": "A secret sharing mechanism based on the principal that using a soon-to-be-expiring link to retrieve sensitive information is better than having the sensitive information persist in email, chat, etc...",
+    "keywords": ["secret","sharing","password","one-time","temporary"],
+    "homepage": "http://getagrippa.com",
+    "license": "MIT",
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
