--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "php artisan key:generate",
+            "php artisan salt:generate"
         ]
     },
     "config": {
